exports[`test renders GridRow correctly 1`] = `
<div
  className="GridRow btn-group"
  role="group" />
`;

exports[`test renders GridRow correctly 2`] = `
<div
  className="GridRow GridRow--is-active btn-group"
  role="group" />
`;

exports[`test renders GridRow correctly 3`] = `
<div
  className="GridRow GridRow--is-active btn-group"
  role="group" />
`;
